--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+	<% flash.each do |type, message| %>
+	<div class="alert flash <%= type %>">
+		<%= message %>
+	</div>
+	<% end %>
+		
+	end
+
 <%= yield %>
 
 </body>
