--- a/app/views/todo_items/edit.html.erb
+++ b/app/views/todo_items/edit.html.erb
@@ -1,17 +1,4 @@
+<h1><%= @todo_list.title %> - Editing Todo List Item</h1>
 <%= form_for [@todo_list, @todo_item] do |form| %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@todo_item.errors.count, "error") %> prohibited this todo item from being saved:</h2>
-
-      <ul>
-      <% @todo_item.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-
-
-	<%= form.label :content %>
-	<%= form.text_field :content %>
-
-	<%= form.submit "Save" %>
+  <%= render partial: form %>
 <% end %>
