--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -1,17 +1,32 @@
 <h1><%= @todo_list.title %></h1>
-<p></p>
 
 <table class="todo_items">
+	<thead>
+		<tr>
+			<th width="25%">Completed?</th>
+			<th width="65%">Content</th>
+			<th width="10%">Functions</th>
+		</tr>
+	</thead>
+	<tbody>
+
 	<% @todo_list.todo_items.each do |todo_item| %>
 	<tr id="<%= dom_id(todo_item) %>">
+		<td>
+			<% if todo_item.completed? %>
+				<%= todo_item.completed_at %>
+			<% else %>
+				<%= link_to "Mark Complete", complete_todo_list_todo_item_path(todo_item), method: :patch %>
+			<% end %>
+		</td>
 		<td><%= todo_item.content %></td>
 		<td>
-			<%= link_to "Mark Complete", complete_todo_list_todo_item_path(todo_item), method: :patch %>
 			<%= link_to "Edit", edit_todo_list_todo_item_path(todo_item) %>
 			<%= link_to "Delete", todo_list_todo_item_path(todo_item), method: :delete, data: { confirm: "Are you sure?" } %>
 		</td>
 	</tr>
 	<% end %>
+	</tbody>
 </table>
 
 <p>
