--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -1,14 +1,39 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
+<h1>
   <%= @todo_list.title %>
-</p>
+</h1>
 
-<p>
-  <strong>Description:</strong>
-  <%= @todo_list.description %>
-</p>
+
+  <h2>
+  	<%= @todo_list.description %>
+  </h2>
+
+<% if @todo_list.has_incomplete_items? %>
+  <h3>
+  	Incomplete Items:
+  </h3>
+
+  <ul>
+  	<% @todo_list.todo_items.incomplete.each do |todo_item| %>
+	<li>
+		<%= todo_item.content %>
+	</li>
+	<% end %>
+  </ul>
+  <% end %>
+
+ <% if @todo_list.has_completed_items? %>
+  <h3>
+  	Complete Items:
+  </h3>
+
+  <ul>
+  	<% @todo_list.todo_items.complete.each do |todo_item| %>
+	<li>
+		<%= todo_item.content %>
+	</li>
+	<% end %>
+  </ul>
+  <% end %>
 
 <%= link_to 'Edit', edit_todo_list_path(@todo_list) %> |
 <%= link_to 'Back', todo_lists_path %>
