catching up code with the download from treehouse

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -28,9 +28,10 @@
     <%= f.password_field :password %>
   </div>
   <div class="field">
-    <%= f.label :password_confirmation, "Password (Again)" %><br>
+    <%= f.label :password_confirmation, "Password (again)" %><br>
     <%= f.password_field :password_confirmation %>
   </div>
+
   <div class="actions">
     <%= f.submit "Sign Up" %>
   </div>
