--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,22 +8,29 @@
 </head>
 <body>
 
-	<div class="nav">
-		<h2><%= link_to "Odot", root_path %></h2>
-		<ul>
-			<li><%= link_to "Todo Lists", todo_lists_path %></li>
-			<li><%= link_to "Sign Up", new_user_path %></li>
-		</ul>
-		<br class="clear" />
-	</div>
+  <div class="nav">
+    <h1><%= link_to "Odot", root_path %></h1>
+    <ul>
+      <li><%= link_to "Todo Lists", todo_lists_path %></li>
+      <% if logged_in? %>
+        <li><%= link_to "Log Out", logout_path, method: :delete %></li>
+      <% else %>
+        <li><%= link_to "Log In", new_user_session_path %></li>
+        <li><%= link_to "Sign Up", new_user_path %></li>
+      <% end %>
+    </ul>
+    <br class="clear" />
+  </div>
 
-	<% flash.each do |type, message| %>
-	<div class="alert flash <%= type %>">
-		<%= message %>
-	</div>
-	<% end %>
-		
-<%= yield %>
+  <% flash.each do |type, message| %>
+  <div class="alert flash <%= type %>">
+    <%= message %>
+  </div>
+  <% end %>
+
+<div class="content">
+  <%= yield %>
+</div>
 
 </body>
 </html>
